--- a/AnalizerBackend/AnalizerBackend.csproj
+++ b/AnalizerBackend/AnalizerBackend.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
+    <PackageReference Include="Telegram.Bot" Version="22.6.2" />
   </ItemGroup>
 
 </Project>
